--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input id="messageState" type="checkbox" style="display:none">
             </label>
             <div class="message no-anim">
-                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear AwO❤,</h1>
+                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear AwO</h1>
                 <p> 
                     <span>
                               AWOOOO SAYANGGGGG❤❤❤, akuuu disiniii mau ngucapin trimakasiiii banyakkk yyaaaaaa, kamuuu bener bener berarti bangettt buat akuu, YANG PASTI AKU HAPPY BANGETTTTTT BISA KENAL SAMA KAMU. Dari yang awalnyaa kita main karena kamu gabut di kos, dan aku gabut di rumah jugaa, akhirnyaa kita mainnnn berduaa, makann di balai kotaaa laluu night ride muterin soloooo. Jujur awalnya aku kaget tauu ketika kamu nyuapin akuu, first time banget disuapin cewe selain mamahku sendiri AHAHAHAHHAHAHAHHAHA. terusss date kita selanjutnyaa ngobrol di manahann, kamuu cerita banyak hal ke akuuKAMU ITU DATENG BENER BENER DISAAT YANG TEPAT BANGETTTT, dimana aku dah hopeless romantic banget. Sampai akhirnya aku ketemu kamu, kamu itu orangnya BAIKKKKK BANGETTTT, CANTIKKKKK BANGETTTTT, IMUPPPPP, LUCUUUUU, AKUUU SUKAAAA SAMAAA KAMUUU. sayanggggg, akuuu benerannnn sayangggg bangettttt samaaaa kamuuuuu, bener bener sayanggg bangetttt.  
