--- a/index.html
+++ b/index.html
@@ -1,52 +1,62 @@
 <!DOCTYPE html>
-<!-- saved from url=(0077)https://meowish-0.github.io/My-Valentine-Confession/valentine-confession.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com/">
-        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
-        <link href="./Valentine Confession_files/css2" rel="stylesheet">
-        <link rel="stylesheet" href="./Valentine Confession_files/valentine-confession.css">
-        <title>tebak isi</title>
-    </head>
-    <body>
-        <p class="instruction">Click the heart!</p>
-        <div class="container" style="background-color: rgb(244, 143, 177);">
-            <label>
-            <div class="heart openedHer beating">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="./Valentine Confession_files/css2" rel="stylesheet">
+    <link rel="stylesheet" href="./Valentine Confession_files/valentine-confession.css">
+    <title>tebak isi</title>
+    <style>
+        .message {
+            display: none; /* awalnya sembunyi */
+        }
+    </style>
+</head>
+<body>
+    <p class="instruction">Click the heart!</p>
+    <div class="container" style="background-color: rgb(244, 143, 177);">
+        <label>
+            <div class="heart beating">
                 <img src="./Valentine Confession_files/Love_Heart_SVG.svg">
             </div>
             <input id="messageState" type="checkbox" style="display:none">
-            </label>
-            <div class="message no-anim">
-                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear AwO</h1>
-                <p> 
-                    <span>
-                              AWOOOO SAYANGGGGG❤❤❤, akuuu disiniii mau ngucapin trimakasiiii banyakkk yyaaaaaa, kamuuu bener bener berarti bangettt buat akuu, YANG PASTI AKU HAPPY BANGETTTTTT BISA KENAL SAMA KAMU. Dari yang awalnyaa kita main karena kamu gabut di kos, dan aku gabut di rumah jugaa, akhirnyaa kita mainnnn berduaa, makann di balai kotaaa laluu night ride muterin soloooo. Jujur awalnya aku kaget tauu ketika kamu nyuapin akuu, first time banget disuapin cewe selain mamahku sendiri AHAHAHAHHAHAHAHHAHA 😋😋. Terusss date kita selanjutnyaa ngobrol di manahann, kamuu cerita banyak hal ke akuuKAMU ITU DATENG BENER BENER DISAAT YANG TEPAT BANGETTTT, dimana aku dah hopeless romantic banget. Sampai akhirnya aku ketemu kamu, kamu itu orangnya BAIKKKKK BANGETTTT, CANTIKKKKK BANGETTTTT, IMUPPPPP, LUCUUUUU, AKUUU SUKAAAA SAMAAA KAMUUU. sayanggggg, akuuu benerannnn sayangggg bangettttt samaaaa kamuuuuu, bener bener sayanggg bangetttt.  
-                        </span>
-                    <br> <br>
-                    <span>    
-                              Sayangggg aku minta maafff yaaaa, akuuu masii banyak kurangnyaaa, ngajakk mainnya kesitu situu muluuu pasti kamu bosennn yyaaa?? aku minta maaff sekaliii ueueueueuueue 🥺🥺🥺🥺, besokk kalo aku dah dapet part timee mau nyenenginn kamuuuu, doainnn aku bisa dapet part timee yyaaa, dan juga aku minta maaffff blom bisa jadi kayak ayah kamuuu, kadang aku mikir, aku masih banyak banget kurangnyaaa, sampe sampe tu aku mikir "emang aku pantes ya buat kamuu???" tapi kamu nunjukkin kamu bisa nerima semua ituu, aku beneran terharu bangett sayangggg. 
-                              Sayangggg, trimakasiii banyak yyaaaa ueueuueueue 🥺🥺 udah nerima akuuu, dan juga aku mintaa maaffff. Sekali lagi aku bilang, aku SAYANGGGGGGG BANGETTTT SAMA KAMUUUU. ILYSMMMMMMMMMM sayanggg ❤❤❤
-                </p>
-                <br>
-                <div class="sincere">
-                    <p style="font-weight: bold;"> Sincerely</p>
-                    <p>Aufar</p>
-                 </div>
+        </label>
+        <div class="message no-anim" id="letter">
+            <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear AwO❤,</h1>
+            <p> 
+                <span>
+                      AWOOOO SAYANGGGGG❤❤❤, akuuu disiniii mau ngucapin trimakasiiii banyakkk yyaaaaaa, kamuuu bener bener berarti bangettt buat akuu...
+                </span>
+                <br><br>
+                <span>
+                    Sayangggg aku minta maafff yaaaa, akuuu masii banyak kurangnyaaa...
+                </span>
+            </p>
+            <br>
+            <div class="sincere">
+                <p style="font-weight: bold;"> Sincerely</p>
+                <p>Aufar</p>
             </div>
         </div>
+    </div>
 
-        <!-- Tambahan lagu -->
-        <audio id="bgm" src="Karolina.mp3" autoplay loop hidden></audio>
-        <script src="./Valentine Confession_files/jquery.js.download"></script>
-        <script src="./Valentine Confession_files/jquery2.1.js.download"></script>
-        <script defer="" src="./Valentine Confession_files/valentine-confession.js.download"></script>
-        <script>
-        // agar autoplay tidak terblokir di beberapa browser, mainkan setelah user klik
+    <!-- Lagu tanpa autoplay -->
+    <audio id="bgm" src="Karolina.mp3" loop hidden></audio>
+
+    <script src="./Valentine Confession_files/jquery.js.download"></script>
+    <script src="./Valentine Confession_files/jquery2.1.js.download"></script>
+    <script defer src="./Valentine Confession_files/valentine-confession.js.download"></script>
+    <script>
         document.querySelector('.heart').addEventListener('click', function() {
+            // munculin surat
+            document.getElementById('letter').style.display = 'block';
+            // hilangin instruksi
+            document.querySelector('.instruction').style.display = 'none';
+            // play musik
             document.getElementById('bgm').play();
         });
-        </script>
-
-</body></html>
+    </script>
+</body>
+</html>
