--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>tebak isi</title>
 
-  <link rel="stylesheet" href="./Valentine Confession_files/valentine-confession.css" />
-
   <style>
     body {
       margin: 0;
       padding: 0;
       background-color: white;
       transition: background-color 1.5s ease;
+      font-family: Arial, sans-serif;
     }
 
     .instruction {
@@ -27,13 +26,34 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
+      position: relative;
     }
 
+    /* hati */
+    #heart-btn {
+      width: 100px;
+      height: 100px;
+      cursor: pointer;
+      z-index: 10;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: transform 0.3s ease;
+    }
+
+    #heart-btn:hover {
+      transform: scale(1.1);
+    }
+
+    /* pesan */
     .message {
       opacity: 0;
-      transform: translateY(-50px);
+      transform: translateY(-60px);
       transition: opacity 1.2s ease, transform 1.2s ease;
       pointer-events: none;
+      text-align: center;
+      padding: 20px;
+      max-width: 600px;
     }
 
     .message.show {
@@ -41,39 +61,23 @@
       transform: translateY(0);
       pointer-events: auto;
     }
-
-    /* Supaya klik kena pasti */
-    .heart {
-      cursor: pointer;
-      z-index: 10;
-    }
   </style>
 </head>
 <body>
   <p class="instruction">Click the heart!</p>
 
   <div class="container">
-    <div id="heart-btn" class="heart beating">
-      <img src="./Valentine Confession_files/Love_Heart_SVG.svg" />
+    <div id="heart-btn">
+      ❤️
     </div>
 
-    <div class="message no-anim" id="letter">
-      <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">
-        Dear AwO❤,
-      </h1>
+    <div class="message" id="letter">
+      <h1>Dear AwO❤,</h1>
       <p>
-        <span>
-            AWOOOO SAYANGGGGG❤❤❤, akuuu disiniii mau ngucapin trimakasiiii
-          banyakkk yyaaaaaa, kamuuu bener bener berarti bangettt buat akuu...
-        </span>
-        <br /><br />
-        <span>
-          Sayangggg aku minta maafff yaaaa, akuuu masii banyak kurangnyaaa...
-        </span>
+        AWOOOO SAYANGGGGG❤❤❤ ...
       </p>
-      <br />
-      <div class="sincere">
-        <p style="font-weight: bold">Sincerely</p>
+      <div>
+        <p><b>Sincerely</b></p>
         <p>Aufar</p>
       </div>
     </div>
@@ -91,7 +95,22 @@
 
     heart.addEventListener('click', function () {
       if (!isOpen) {
+        // buka
         letter.classList.add('show');
         document.body.style.backgroundColor = 'rgb(244, 143, 177)';
         instruction.style.display = 'none';
         audio.currentTime = 0;
+        audio.play();
+      } else {
+        // tutup
+        letter.classList.remove('show');
+        document.body.style.backgroundColor = 'white';
+        instruction.style.display = 'block';
+        audio.pause();
+        audio.currentTime = 0;
+      }
+      isOpen = !isOpen;
+    });
+  </script>
+</body>
+</html>
