--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>tebak isi</title>
 
+  <!-- CSS eksternal -->
   <link rel="stylesheet" href="./Valentine Confession_files/valentine-confession.css" />
 
   <style>
@@ -12,7 +13,7 @@
       margin: 0;
       padding: 0;
       background-color: white;
-      transition: background-color 2s ease;
+      transition: background-color 1.5s ease;
     }
 
     .instruction {
@@ -29,17 +30,19 @@
       height: 100vh;
     }
 
+    /* Surat disembunyikan dulu */
     .message {
       opacity: 0;
       transform: translateY(-50px);
-      transition: all 1.3s ease;
-      display: none;
+      transition: all 1.2s ease;
+      pointer-events: none;
     }
 
+    /* Surat saat dibuka */
     .message.show {
-      display: block;
       opacity: 1;
       transform: translateY(0);
+      pointer-events: auto;
     }
   </style>
 </head>
@@ -61,12 +64,11 @@
       <p>
         <span>
             AWOOOO SAYANGGGGG❤❤❤, akuuu disiniii mau ngucapin trimakasiiii
-          banyakkk yyaaaaaa, kamuuu bener bener berarti bangettt buat akuu, ...
+          banyakkk yyaaaaaa, kamuuu bener bener berarti bangettt buat akuu...
         </span>
         <br /><br />
         <span>
-          Sayangggg aku minta maafff yaaaa, akuuu masii banyak
-          kurangnyaaa...
+          Sayangggg aku minta maafff yaaaa, akuuu masii banyak kurangnyaaa...
         </span>
       </p>
       <br />
@@ -80,20 +82,30 @@
   <audio id="bgm" src="Karolina.mp3" loop hidden></audio>
 
   <script>
-    document.querySelector(".heart").addEventListener("click", function () {
-      // Transisi warna background
-      document.body.style.backgroundColor = "rgb(244, 143, 177)";
+    const heart = document.querySelector('.heart');
+    const letter = document.getElementById('letter');
+    const audio = document.getElementById('bgm');
+    const instruction = document.querySelector('.instruction');
 
-      // Munculkan surat turun perlahan
-      const letter = document.getElementById("letter");
-      letter.classList.add("show");
+    let isOpen = false;
 
-      // Hilangin instruksi
-      const instruksi = document.querySelector(".instruction");
-      if (instruksi) instruksi.style.display = "none";
-
-      // Play musik
-      document.getElementById("bgm").play();
+    heart.addEventListener('click', function () {
+      if (!isOpen) {
+        // BUKA
+        letter.classList.add('show');
+        document.body.style.backgroundColor = 'rgb(244, 143, 177)';
+        instruction.style.display = 'none';
+        audio.currentTime = 0;
+        audio.play();
+      } else {
+        // TUTUP
+        letter.classList.remove('show');
+        document.body.style.backgroundColor = 'white';
+        audio.pause();
+        audio.currentTime = 0;
+        instruction.style.display = 'block';
+      }
+      isOpen = !isOpen;
     });
   </script>
 </body>
