--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             display: none; /* awalnya sembunyi */
         }
     </style>
-</head>
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 <body>
     <p class="instruction">Click the heart!</p>
     <div class="container" style="background-color: rgb(244, 143, 177);">
@@ -24,14 +24,13 @@
             <input id="messageState" type="checkbox" style="display:none">
         </label>
         <div class="message no-anim" id="letter">
-            <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear AwO❤,</h1>
+            <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear AwO❤</h1>
             <p> 
                 <span>
-                      AWOOOO SAYANGGGGG❤❤❤, akuuu disiniii mau ngucapin trimakasiiii banyakkk yyaaaaaa, kamuuu bener bener berarti bangettt buat akuu...
-                </span>
+                Sayangggg aku minta maafff yaaaa, akuuu masii banyak kurangnyaaa, ngajakk mainnya kesitu situu muluuu pasti kamu bosennn yyaaa?? aku minta maaff sekaliii ueueueueuueue 🥺🥺🥺🥺, besokk kalo aku dah dapet part timee mau nyenenginn kamuuuu, doainnn aku bisa dapet part timee yyaaa, dan juga aku minta maaffff blom bisa jadi kayak ayah kamuuu, kadang aku mikir, aku masih banyak banget kurangnyaaa, sampe sampe tu aku mikir "emang aku pantes ya buat kamuu???" tapi kamu nunjukkin kamu bisa nerima semua ituu, aku beneran terharu bangett sayangggg. 
                 <br><br>
                 <span>
-                    Sayangggg aku minta maafff yaaaa, akuuu masii banyak kurangnyaaa...
+                Sayangggg, trimakasiii banyak yyaaaa ueueuueueue 🥺🥺 udah nerima akuuu, dan juga aku mintaa maaffff. Sekali lagi aku bilang, aku SAYANGGGGGGG BANGETTTT SAMA KAMUUUU. ILYSMMMMMMMMMM sayanggg ❤❤❤
                 </span>
             </p>
             <br>
